src/objects/Message_User__c.object
<CustomObject>
    <description>wrapper object to store the users on a message</description>
    <fields>
        <fullName>Message_Header__c</fullName>
        <label>Message Header</label>
        <referenceTo>Message_Header__c</referenceTo>
        <relationshipLabel>Message Users</relationshipLabel>
        <relationshipName>Message_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User__r.FirstName +  User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the user on a message</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Message_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Message User</label>
    <nameField>
        <displayFormat>MU-{000000000}</displayFormat>
        <label>Message User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>